<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/RootContainer.LinearVertical">

    <include layout="@layout/layout_title_left_img_center_txt"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:scaleType="fitXY"
        android:src="@drawable/pic_help_banner"/>

    <ScrollView
        style="@style/RootContainer.Form"
        android:layout_weight="1">

        <LinearLayout

            style="@style/RootContainer.Form">

            <RelativeLayout
                android:id="@+id/rl_version_check"
                style="@style/FormItemContainer">

                <TextView
                    style="@style/FormItemTextLeft"
                    android:text="@string/help_main_version_check"/>

                <ImageView
                    android:id="@+id/imgvi_version_arrow"
                    style="@style/FormItemArrow"/>

                <TextView
                    android:id="@+id/txt_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_padding_left_right_11dp"
                    android:layout_toLeftOf="@+id/imgvi_version_arrow"
                    android:text="@string/help_main_version_current"
                    android:textColor="@color/txt_96"
                    android:textSize="@dimen/txt_size_11"/>
            </RelativeLayout>

            <View style="@style/Icon.HLine"/>

            <RelativeLayout
                android:id="@+id/rl_version_intro"
                style="@style/FormItemContainer">

                <TextView
                    style="@style/FormItemTextLeft"
                    android:text="@string/help_main_version_intro"/>

                <ImageView
                    style="@style/FormItemArrow"/>

            </RelativeLayout>

            <View style="@style/Icon.HLine"/>

            <RelativeLayout
                android:id="@+id/rl_protocol"
                style="@style/FormItemContainer">

                <TextView
                    style="@style/FormItemTextLeft"
                    android:text="@string/help_main_protocol"/>

                <ImageView
                    style="@style/FormItemArrow"/>

            </RelativeLayout>

            <View style="@style/Icon.HLine"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/help_main_copyright"
            android:textColor="@color/txt_6b"
            android:textSize="@dimen/txt_size_12"/>
    </RelativeLayout>

</LinearLayout>